tdf#91499 - cleanup AnyRefDialog VclPtr's with an explicit dispose method.

Change-Id: Ib3571fc6d2aa9343bcfd2d6a5bdbd6b1d193c0f1
Reviewed-on: https://gerrit.libreoffice.org/15883
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
Tested-by: Michael Meeks <michael.meeks@collabora.com>